[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hxmtdap"
description = "HXMTDAS Pipeline"
version = "0.2.5"
dependencies = [
    "requests>=2.24.0",
    "astropy>=4.0.0",
    "cycler>=0.10.0",
    "hvplot>=0.10.0",
    "matplotlib",
    "networkx>=3.1.0",
    "pandas",
    "sympy",
    "panel>=1.2.0",
    "rich",
    "scipy",
    "uncertainties",
    "stingray",
    "corner",
    "portion"
]
authors = [
    {name = "Chenxu Gao", email = "cxgao@shao.ac.cn"}
]
requires-python = ">=3.7"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPL 3.0 License"}


